local/templates/kontur.remontkvartir/template_styles.css
/* ... */
.paginator .link:hover {
  background: var(--color-primary);
  color: #000;
}
.paginator .link.active {
  font-weight: 700;
  color: var(--color-main-text);
  background: #FFFFFF;
}
.paginator.center {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.stock {
  padding-bottom: 200px;
}
.stock .slick-dots {
  min-width: 326px;
  max-width: 326px;
  width: 100%;
  bottom: -130px;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  z-index: 9;
}
.stock .slick-dots li {
  background: #FFFFFF;
  width: 100%;
  height: 100px;
  margin: 0;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  position: relative;
}
.stock .slick-dots li button {
  display: none;
}
.stock .slick-dots li:hover {
  background: var(--color-primary);
}
.stock .slick-dots li::after {
  content: "01";
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  font-weight: 400;
  font-size: 18px;
  line-height: 125%;
  color: var(--color-main-text);
  opacity: 0.5;
}
.stock .slick-dots li:nth-child(2)::after {
  content: "02";
}
.stock .slick-dots li:nth-child(3)::after {
  content: "03";
}
.stock .slick-dots li:nth-child(4)::after {
  content: "04";
}
.stock .slick-dots li:nth-child(5)::after {
  content: "05";
}
.stock .slick-dots li.slick-active::after {
  font-weight: 700;
  opacity: 1;
}
.stock .slick-prev, .stock .slick-next {
  width: 100px;
  height: 100px;
  bottom: -130px;
  z-index: 10;
  top: auto;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  left: 50%;
}
.stock .slick-prev {
  margin-left: -213px;
  background: #FFFFFF url('./images/left.svg') no-repeat center;
}
.stock .slick-next {
  margin-left: 213px;
  right: auto;
  background: #FFFFFF url('./images/right.svg') no-repeat center;
}
.stock .slick-prev::before, .stock .slick-next::before {
  display: none;
}
.stock .slick-prev:hover {
  background: var(--color-primary) url('./images/left.svg') no-repeat center;
}
.stock .slick-next:hover {
  background: var(--color-primary) url('./images/right.svg') no-repeat center;
}
.stock .title_h2 {
  margin-bottom: 44px;
}
.stock__block {
  width: 487px;
  margin-right: 29px;
  margin-bottom: 30px;
  background: var(--color-primary);
  padding: 34px 32px 35px 32px;
}
.stock__block .title {
  max-width: 300px;
  width: 100%;
  font-weight: 700;
  font-size: 26px;
  line-height: 125%;
  color: var(--color-main-text);
  margin-bottom: 14px;
}
.stock__block .text {
  font-weight: 400;
  font-size: 18px;
  line-height: 150%;
  color: var(--color-main-text);
}
.consultation_wrap {
  overflow: hidden;
  padding-top: 50px;
  margin-bottom: 105px;
}
.consultation {
  height: 710px;
  background: url('./images/consultation.png') no-repeat center/cover;
}
.consultation__box {
  max-width: 1260px;
  width: 100%;
  height: 710px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: relative;
  margin: 0 auto;
}
.consultation__box .iphone {
  position: absolute;
  bottom: 0;
  left: 810px;
  -webkit-transform: translateY(100%);
          transform: translateY(100%);
  -webkit-transition: all 0.8s ease;
  transition: all 0.8s ease;
}
.consultation:hover .consultation__box .iphone {
  -webkit-transform: translateY(0);
          transform: translateY(0);
}
.consultation__left {
  width: 415px;
  margin-right: 29px;
}
.consultation__left .title {
  font-weight: 700;
  font-size: 44px;
  line-height: 125%;
  letter-spacing: 0.01em;
  color: #FFFFFF;
  margin-bottom: 32px;
}
.consultation__left .ul {
  max-width: 275px;
  width: 100%;
}
.consultation__left .li {
  padding-left: 35px;
  font-weight: 400;
  font-size: 18px;
  line-height: 150%;
  color: #FFFFFF;
  margin-bottom: 32px;
  position: relative;
}
.consultation__left .li:last-child {
  margin-bottom: 0;
}
.consultation__left .li::before {
  content: "";
  width: 6px;
  height: 6px;
  background: var(--color-primary);
  position: absolute;
  top: 12px;
  left: 0;
}
.consultation__form {
  width: 375px;
  padding: 61px 60px 54px 60px;
  background: #FFFFFF;
}
.consultation__form .input {
  margin-bottom: 15px;
}
.consultation__form .input input {
  width: 100%;
  height: 69px;
  border: 1px solid #E8EBEE;
  padding: 0 29px;
  font-weight: 400;
  font-size: 18px;
  line-height: 125%;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.consultation__form .input input:focus {
  border: 1px solid var(--color-primary);
}
.consultation__form .input input::-webkit-input-placeholder {
  color: #B2ADAB;
}
.consultation__form .input input::-moz-placeholder {
  color: #B2ADAB;
}
.consultation__form .input input:-ms-input-placeholder {
  color: #B2ADAB;
}
.consultation__form .input input::-ms-input-placeholder {
  color: #B2ADAB;
}
.consultation__form .input input::placeholder {
  color: #B2ADAB;
}
.consultation__form .btn {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  width: 100%;
  background: var(--color-primary);
  margin-top: 15px;
  padding: 23px 40px;
  border: 0;
  margin-bottom: 25px;
  border: 2px solid transparent;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}
.consultation__form .btn:hover {
  border: 2px solid var(--color-primary);
  background-color: transparent;
}
.consultation__form .text {
  font-weight: 400;
  font-size: 14px;
  line-height: 125%;
  text-align: center;
  color: #B2ADAB;
}
/* ... */

